# NN_WindLoadEstimation

./: .gitignore  README.md  requirements.txt
checkpoints/: cnn_gap1.pth  cnn_gap10.pth  cnn_latest.pth  cnn_lstm_best.pth  cnn_lstm_latest.pth  cnn_lstm_latest_2025-04-29_16-30-41.pth  ffnn_1.pth  ffnn_2.pth  ffnn_3.pth  ffnn_latest.pth  lstm_latest.pth  lstm_latest_2025-04-29_16-30-41.pth  one_layer_nn_1.pth  one_layer_nn_2.pth  one_layer_nn_3.pth  one_layer_nn_latest.pth  rbfn_keras_latest.keras  rbfn_latest.npz  rbfpytorch_gap1.pth  rbfpytorch_gap10.pth  rbfpytorch_latest.pth  rbfpytorch_static.pth  tcn_best.pth  tcn_latest.pth  transformer_1.pth  transformer_2.pth  transformer_3.pth  transformer_latest.pth
logs/test_logs/: cnn_gap10_len100_logs_2025-05-09_20-13-51.csv  cnn_gap1_len100_logs_2025-05-09_20-18-41.csv  (+36 more)
models/: CNN.py  CNNLSTM.py  FFNN.py  LSTM.py  OneLayerNN.py  RBF.py  RBF_Keras.py  RBF_PyTorch.py  RadialBasisFunctionModel.py  TCN.py  Transformer.py  XGBoost.py  mamba.py
nn_est/: evaluate.py  evaluate_data_Maria_Jackie.py  evaluate_new_test_data.py  evaluate_new_test_data_1.py  features.py  features_new_test_data.py  features_new_test_data_1.py  hyperparameters.py  inference.py  train.py  train_pretrained.py
nn_windloadestimation/: Makefile  README.md  pyproject.toml
results_inference/: inference_results_cnn_gap10_2025-05-09_18-52-52.csv  inference_results_cnn_gap1_2025-05-09_18-51-00.csv  inference_results_rbf_gap10_2025-05-09_19-03-52.csv  inference_results_rbf_gap1_2025-05-09_19-01-57.csv  inference_results_rbf_static_2025-05-10_00-17-36.csv
(+84 files in other folders)
